src/jest/matchers/__snapshots__/to-match-codeframe.spec.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`toMatchCodeframe() should handle hint: foobar 1`] = `""`;

exports[`toMatchCodeframe() should match invalid async report 1`] = `
"error: mock message (my-rule)
  2 | 		<header id="foo">
  3 | 			<div>
> 4 | 				<p>lorem ipsum</p>
    | 				   ^^^^^^^^^^^
  5 | 			</div>
  6 | 		</header>
  7 |
Selector: #foo > div"
`;

exports[`toMatchCodeframe() should match invalid report 1`] = `
"error: mock message (my-rule)
  2 | 		<header id="foo">
  3 | 			<div>
> 4 | 				<p>lorem ipsum</p>
    | 				   ^^^^^^^^^^^
  5 | 			</div>
  6 | 		</header>
  7 |
Selector: #foo > div"
`;

exports[`toMatchCodeframe() should match invalid string 1`] = `
"error: Unclosed element '<div>' (close-order)
> 1 | <div>
    |  ^^^
Selector: div"
`;

exports[`toMatchCodeframe() should match valid async report 1`] = `""`;

exports[`toMatchCodeframe() should match valid report 1`] = `""`;

exports[`toMatchCodeframe() should match valid string 1`] = `""`;
